--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,10 @@
   <meta charset="utf-8">
   <title>NewLogin</title>
   <base href="/">
-
+  <script src="https://connect.facebook.net/en_US/sdk.js" ></script>
+  <script src="https://apis.google.com/js/platform.js" ></script>
+  
+  <meta name="google-signin-client_id" content="653993884008-9t9sjrdra7to61fbm7uiajud4cuv79oj.apps.googleusercontent.com">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
